add appbar up action.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -18,5 +18,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".AppBarActivity"/>
+        <activity android:name=".AppBarUpActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
     </application>
 </manifest>
