--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:label="KitchenSink"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:theme="@style/AppTheme"
         android:allowBackup="false">
         <activity
             android:name=".MainActivity"
